fix: mobile sell button gap fixed

--- a/src/components/styles/stockCard.css
+++ b/src/components/styles/stockCard.css
@@ -97,7 +97,7 @@
   @media (max-width: 765px) {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-    margin-bottom: 0rem;
+    margin-bottom: 1rem;
   }
 }
 
